# rdkvhal-miracast-raspberrypi4

./: CHANGELOG.md  CMakeLists.txt  MiracastPlayerHal.pc.in  NOTICE  README.md  SoC_MiracastPlayer.cpp  SoC_MiracastPlayer.h  halLogger.cpp  halLogger.h
src/: SoC_MiracastPlayer.cpp  SoC_MiracastPlayer.h
